Sugati/src/objects/Opportunity_Email__c.object
<CustomObject>
    <fields>
        <fullName>OE_Bcc_Email_Addresses__c</fullName>
        <label>Bcc Email Addresses</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OE_Cc_Email_Addresses__c</fullName>
        <label>Cc Email Addresses</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OE_Email_Body__c</fullName>
        <label>Email Body</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>OE_Email_Closing__c</fullName>
        <label>Email Closing</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>OE_Email_Intro__c</fullName>
        <label>Email Intro</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>OE_Email_Subject__c</fullName>
        <label>Email Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OE_Email_Type__c</fullName>
        <label>Email Type</label>
        <picklist>
            <picklistValues>
                <fullName>Booking Form Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Itinerary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HE Recap Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holiday Suggestion</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OE_Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Emails</relationshipLabel>
        <relationshipName>Opportunity_Emails</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>OE_To_Email_Addresses__c</fullName>
        <label>To Email Addresses</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Opportunity Email</label>
    <nameField>
        <displayFormat>OE-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Emails</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>